# TMotor_AKSeries

./: README.md
Inc/: ak10-9_v2_testing.h  tmotor_ak.h
PC_End/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
PC_End/include/: serial_test.hpp
Src/: ak10-9_v2_testing.c  tmotor_ak.c
